# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.24 2009/05/29 23:26:49 vapier Exp $

*e2fsprogs-libs-1.41.5 (29 May 2009)

  29 May 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.5.ebuild:
  Version bump #267402 by Paul Mulders.

  15 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.4.ebuild:
  Force recent version of glibc for tls support.

*e2fsprogs-libs-1.41.4 (28 Jan 2009)

  28 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.4.ebuild:
  Version bump.

*e2fsprogs-libs-1.41.3-r1 (30 Dec 2008)

  30 Dec 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
  +e2fsprogs-libs-1.41.3-r1.ebuild:
  RevBump, ebuild written in EAPI-2 in order to resolve old blockers
  automatically, fixes bug #234907 , bug #249663

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  e2fsprogs-libs-1.41.3.ebuild:
  ppc stable, bug #251808

  29 Dec 2008; Brent Baude <ranger@gentoo.org> e2fsprogs-libs-1.41.3.ebuild:
  Marking e2fsprogs-libs-1.41.3 ppc64 for bug 251808

  29 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  e2fsprogs-libs-1.41.3.ebuild:
  Stable on sparc, bug #251808

  27 Dec 2008; Jeremy Olexa <darkside@gentoo.org>
  e2fsprogs-libs-1.41.3.ebuild:
  amd64 stable, bug 251808

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org>
  e2fsprogs-libs-1.41.3.ebuild:
  ia64/x86 stable wrt #251808

  26 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  e2fsprogs-libs-1.41.3.ebuild:
  Stable on alpha, bug #251808

  25 Dec 2008; Guy Martin <gmsoft@gentoo.org> e2fsprogs-libs-1.41.3.ebuild:
  hppa stable, #251808

  15 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.2.ebuild, e2fsprogs-libs-1.41.3.ebuild:
  Do not export STRIP as portage uses that when stripping things ... just
  pass it along to the build system directly.

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org>