@@ -2,8 +2,10 @@ AUX e2fsprogs-libs-1.41.1-darwin-makefile.patch 3415 RMD160 0628edad82fd293634e6
 DIST e2fsprogs-libs-1.41.3.tar.gz 489551 RMD160 73ec32fd8ed9869f5b1350cf85adcc51cc15c0dd SHA1 c1c24e9059a34a6f40b92902211d12bab8c39763 SHA256 38b8163595da62f740b62bf4e77bbe5429cd78303f5fbdc260122d25d3a3300c
 DIST e2fsprogs-libs-1.41.4.tar.gz 493241 RMD160 46b6d0e9fde00abf84fa3fafe909fc78bc4d87fd SHA1 0094812d0df9b1a138ea9eeab16b523397ef2c9d SHA256 c88f3400f9ed90c353363610df43d76a7a6d801d3df4897935ad1b396d9cab6f
 DIST e2fsprogs-libs-1.41.5.tar.gz 493800 RMD160 9be406e43359db58423dedf08f5df6fcfd8e3f5e SHA1 c9db02f0f01f72bfa13dc14897e3a6583d157e6b SHA256 dc1eb1b7bbad2edc030e50e7506c79562d98098f99a5d6cb5db5aa5ca92ffe48
+DIST e2fsprogs-libs-1.41.6.tar.gz 492357 RMD160 cc04e4ec7e6037fb04fd1b8f060f5df65770838e SHA1 b95c809918a75456c8af6aec4512f6480585a4b7 SHA256 7eb9583032f4a9de9c5cf23d3f29f2d0878f1289359ec5c73d5e7e7c5a3146f6
 EBUILD e2fsprogs-libs-1.41.3-r1.ebuild 1828 RMD160 0dcab34fcc40764c011d6e45b3851e79b68090e3 SHA1 db39ba23ea1f51f51cf199b0ddd72b182455bafb SHA256 50bae532933ebe98b861ec63310a6997ba3425bee53bb88f216ff3cfa57960c7
 EBUILD e2fsprogs-libs-1.41.4.ebuild 1793 RMD160 49e0f5c9256079df3ce183fb2eabc15225409974 SHA1 8bbc812bd85035d541e8d6c4f009f80bb37dff48 SHA256 0f028c1e11487a631cbc69dcb73686a3ac3fa0fa5efc719b75879e53afe1add3
 EBUILD e2fsprogs-libs-1.41.5.ebuild 1579 RMD160 ff237ee22228302b2a2ef46b6791cf9dca13403f SHA1 609bda9255c3e87b68b5a1809d80ad6ac11ddd0b SHA256 ddef9b269985d898d266e1e731a54b5bfe737c0a3d1f2610a51e06f12e2cd15e
-MISC ChangeLog 3376 RMD160 2fb393b3461b2753310632fb8965fe70392c5bc3 SHA1 14b9c92595a11f41cde731bd083cd1a96fc43e46 SHA256 83029f1268a9cee1a4611f90a309b554850677ea3ce8267b9263c5732154c013
+EBUILD e2fsprogs-libs-1.41.6.ebuild 1579 RMD160 2987add802689a4f8a23a31038117d1ffbb43558 SHA1 70654701fb750782e7e420cc06f075060464ef37 SHA256 ce018c499144ccccfb473c6e999dc421188bdbc4096c1ebf3ef4606af3ed1157
+MISC ChangeLog 3514 RMD160 1980a3dc01a910006e0dd25b0fef3b9be585a485 SHA1 22d3c8a38e95edb523204a0fca8970d46d7f1f24 SHA256 6d77808a3f0b869274b0b67a28aa5987ea5ef5f48cdd67e44094b9851138b664
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
