@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.24 2009/05/29 23:26:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.25 2009/05/30 18:55:34 vapier Exp $
+
+*e2fsprogs-libs-1.41.6 (30 May 2009)
+
+  30 May 2009; Mike Frysinger <vapier@gentoo.org>
+  +e2fsprogs-libs-1.41.6.ebuild:
+  Version bump.
 
 *e2fsprogs-libs-1.41.5 (29 May 2009)
 
